--- a/sample1X.html
+++ b/sample1X.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>自己紹介のページ</title>
+	<title>Sho World Introduce.</title>
 	<script src="./processing.js"></script>
 	<style>
 
